// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Styles matches info 1`] = `
.c0 {
  display: inline-block;
  padding: 0.25em 0.4em;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
  color: #fff;
  background-color: #17a2b8;
}

.c0:empty {
  display: none;
}

<span
  className="c0"
/>
`;

exports[`Styles matches info action 1`] = `
.c0 {
  display: inline-block;
  padding: 0.25em 0.4em;
  font-size: 75%;
  font-weight: 700;
  line-height: 1;
  text-align: center;
  white-space: nowrap;
  vertical-align: baseline;
  border-radius: 0.25rem;
  color: #fff;
  background-color: #17a2b8;
}

.c0:empty {
  display: none;
}

.c0 > a {
  text-decoration: none;
  color: #fff;
}

.c0 > a:hover,
.c0 > a:focus {
  text-decoration: none;
  color: #fff;
}

.c0:hover,
.c0:focus {
  background-color: #117a8b;
}

<span
  action={true}
  className="c0"
/>
`;
